src/test/ui/dropck/dropck-union.stderr
error[E0597]: `v` does not live long enough
  --> $DIR/dropck-union.rs:39:19
   |
LL |     v.0.set(Some(&v));
   |                   ^ borrowed value does not live long enough
LL | }
   | - `v` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
